SERVER-14494 SERVER-14505 ensure that IndexBuildBlock::fail() can never throw

(backport of 5e06c1745105c8e2b50ba875e4433cd93f471ea4)